--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "maatwebsite/excel": "^1.1",
-        "psr/simple-cache": "1.0"
+        "psr/simple-cache": "1.0",
+        "stevebauman/location": "^6.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
