--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "larswiegers/laravel-maps": "^0.13.0",
         "maatwebsite/excel": "^1.1",
         "psr/simple-cache": "1.0",
-        "stevebauman/location": "^6.5"
+        "stevebauman/location": "^6.5",
+        "torann/geoip": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
