--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "postcss": "^8.1.14",
         "sass": "^1.56.1",
         "vite": "^4.0.4"
+    },
+    "dependencies": {
+        "leaflet": "^1.9.3"
     }
 }
