--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "larswiegers/laravel-maps": "^0.13.0",
-        "maatwebsite/excel": "^1.1",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpexcel": "1.8",
+        "phpoffice/phpspreadsheet": "^1.27",
         "psr/simple-cache": "1.0",
         "stevebauman/location": "^6.5",
         "torann/geoip": "^3.0"
