--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^4.0.4"
     },
     "dependencies": {
-        "leaflet": "^1.9.3"
+        "leaflet": "^1.9.3",
+        "leaflet-geosearch": "^3.7.0"
     }
 }
